--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -3,4 +3,5 @@ RUN dnf install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
 ADD https://github.com/hussainbi03/JENKINS/blob/main/Jenkinsfile /usr/share/nginx/html/index.html
 RUN chmod +r /usr/share/nginx/html/index.html
+ADD sample-1.tar /tmp/
 CMD ["nginx", "-g", "daemon off;"]
