--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,4 +1,5 @@
 FROM almalinux:9
 RUN mkdir /tmp/expense
-WORKDIR expense
+WORKDIR /tmp/expense
+RUN pwd
 RUN echo "hello iam work dir" > hsample.txt
