--- a/DOCKER-EXPENSE/docker-compose.yaml
+++ b/DOCKER-EXPENSE/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
 
   backend:
     image: backend:1.0.0
-    command: sh -c "sleep 10 && node /opt/backend/index.js"
+    command: sh -c "sleep 5 && node /opt/backend/index.js"
     networks:
     - expense
     container_name: backend
@@ -24,6 +24,8 @@ services:
     networks:
     - expense
     container_name: frontend
+    ports:
+    - 80:80
     depends_on:
     - backend  
 
