--- a/DOCKER-EXPENSE/BACKEND/Dockerfile
+++ b/DOCKER-EXPENSE/BACKEND/Dockerfile
@@ -1,7 +1,12 @@
-FROM node:20
+#FROM node:20
+FROM node:20.18.3-alpine3.21
+RUN addgroup -S expense && adduser -S expense -G expense && \
+    mkdir /opt/backend && \
+    chown -R expense:expense /opt/backend
 WORKDIR /opt/backend
 COPY package.json ./
 COPY *.js ./
 RUN npm install
+USER expense
 ENV DB_HOST="mysql"
 CMD ["node", "index.js"]
