--- a/DOCKER-EXPENSE/docker-compose.yaml
+++ b/DOCKER-EXPENSE/docker-compose.yaml
@@ -4,7 +4,7 @@ volumes:
   mysql:
 services:
   mysql:
-    image: mysql:1.0.0
+    image: hussainbi/mysql:1.0.0
     networks:
     - expense
     container_name: mysql
@@ -12,7 +12,7 @@ services:
     - mysql:/var/lib/mysql
 
   backend:
-    image: backend:1.0.0
+    image: hussainbi/backend:1.0.0
     command: sh -c "sleep 5 && node /opt/backend/index.js"
     networks:
     - expense
@@ -20,7 +20,7 @@ services:
     depends_on:
     - mysql
   frontend:
-    image: frontend:1.0.0
+    image: hussainbi/frontend:1.0.0
     networks:
     - expense
     container_name: frontend
